Animated the __label in _form - label is initially not visible while input placeholder is shown - label becomes visible the user starts typing(placeholder is gone) - label slides down below the input - fixed: font-style to font-size

--- a/css/style.css
+++ b/css/style.css
@@ -368,11 +368,17 @@ body {
     color: #999; }
 
 .form__label {
-  font-style: 1.2rem;
+  font-size: 1.2rem;
   font-weight: 700;
   margin-left: 2rem;
   margin-top: 0.7rem;
-  display: block; }
+  display: block;
+  transition: all 0.3s; }
+
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4rem); }
 
 .story {
   width: 75%;
