--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -31,10 +31,18 @@
   }
 
   &__label {
-    font-style: 1.2rem;
+    font-size: 1.2rem;
     font-weight: 700;
     margin-left: 2rem;
     margin-top: 0.7rem;
     display: block;
+    transition: all 0.3s;
+  }
+
+  // sibling selector
+  &__input:placeholder-shown + &__label {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-4rem);
   }
 }
